Playing around, measuring power.

--- a/samples/hello_world/prj.conf
+++ b/samples/hello_world/prj.conf
@@ -1,1 +1,7 @@
 # nothing here
+CONFIG_SERIAL=n # This disables UART which draws power.
+CONFIG_DEBUG=y
+CONFIG_DEBUG_INFO=y
+CONFIG_PRINTK=n
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
+CONFIG_SYSTEM_CLOCK_NO_WAIT=y
